# python-project-83

./: .gitignore  README.md  database.sql  makefile  pyproject.toml
.github/workflows/: python-check.yml
page_analyzer/: UrlDto.py  UrlRepository.py  __init__.py  app.py  db.py  db_initializer.py  db_utils.py  seo_parser.py  utils.py
page_analyzer/models/: UrlCkeckDto.py  UrlDto.py
page_analyzer/templates/: _flash.html  _footer.html  _head.html  _header.html  body.html  header.html  index.html  layout.html  url.html
page_analyzer/templates/urls/: list.html  single.html
tests/: page_analyzer_test.py  test_page_analyzer.py  test_seo_parser.py  utils.py
tests/fixtures/: correct_urls.json  seo_in.html  seo_out.json  wrong_urls.json
